# satisfactory-editor

./: .gitignore  3rdpartylicenses.txt  Cargo.toml  Dockerfile  README.md  angular.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: publish.yml
.tauri/: app.key.pub
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs  save.rs
crates/satisfactory-extractor/: Cargo.toml
crates/satisfactory-extractor/src/: lib.rs
src/: index.html  style.css  style.scss
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: output.json
src-tauri/capabilities/: default.json
src-tauri/src/: docs.rs  lib.rs  main.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts  data.service.ts
src/app/components/context-menu/: context-menu.component.css  context-menu.component.html  context-menu.component.ts
src/app/components/item/: item.component.html  item.component.scss  item.component.ts
src/app/components/main/: main.component.html  main.component.scss  main.component.ts
src/app/components/update/: update.component.html  update.component.scss  update.component.ts
src/app/editor/: api.ts  editor.module.ts
src/app/editor/components/background/: background.component.html  background.component.ts
src/app/editor/components/connection/: connection.component.html  connection.component.ts
src/app/editor/components/custom-node-base/: custom-node-base.component.ts
src/app/editor/components/defs/: defs.component.html  defs.component.scss  defs.component.ts
src/app/editor/components/edge/: edge.component.html  edge.component.scss  edge.component.ts
src/app/editor/components/edge-label/: edge-label.component.html  edge-label.component.ts
src/app/editor/components/editor/: editor.component.html  editor.component.scss  editor.component.ts
src/app/editor/components/editor/background/: background.component.html  background.component.ts
src/app/editor/components/handle/: handle.component.ts
src/app/editor/components/node/: node.component.html  node.component.scss  node.component.ts
src/app/editor/decorators/: microtask.decorator.ts  run-in-injection-context.decorator.ts
src/app/editor/directives/: connection-controller.directive.ts  editor-size-controller.directive.ts  handle-size-controller.directive.ts  map-context.directive.ts  pointer.directive.ts  reference.directive.ts  root-connection-context.directive.ts  root-pointer.directive.ts  selectable.directive.ts  space-point-context.directive.ts  template.directive.ts
src/app/editor/interfaces/: connection-settings.interface.ts  connection.interface.ts  connection.internal.interface.ts  edge-context.interface.ts  edge-label.interface.ts  edge.interface.ts  entity.interface.ts  fit-view-options.interface.ts  handle-positions.interface.ts  marker.interface.ts  node.interface.ts  path-data.interface.ts  viewport.interface.ts
src/app/editor/math/: point-on-line-by-ratio.ts
src/app/editor/math/edge-path/: bezier-path.ts  straight-path.ts
src/app/editor/models/: connection.model.ts  edge-label.model.ts  edge.model.ts  handle.model.ts  node.model.ts
src/app/editor/public-components/: custom-dynamic-node.component.ts  custom-node.component.ts
src/app/editor/services/: connection-status.service.ts  draggable.service.ts  editor-settings.service.ts  entities.service.ts  handle.service.ts  node-rendering.service.ts  selection.service.ts  viewport.service.ts
src/app/editor/types/: background.type.ts  background.types.ts  connection.type.ts  handle.type.ts  using-points.type.ts
src/app/editor/utils/: add-nodes-to-edges.ts  adjust-direction.ts  hash.ts  node.ts  reference-keeper.ts  resizable.ts  viewport.ts
src/app/interfaces/: Item-data.interface.ts  building.interface.ts  item.interface.ts  part.interface.ts  recipe.interface.ts
src/app/services/: data.service.ts  entities.service.ts  layout.service.ts  save.service.ts
src/assets/: data.json
