[workspace]
resolver = "2"
members = ["crates/satisfactory-extractor", "src-tauri"]
default-members = ["src-tauri"]

[workspace.dependencies]
#internals
satisfactory-extractor = { path = "./crates/satisfactory-extractor" }
#externals
regex = "1.10.6"
serde = "1"
serde_json = "1.0.125"
tauri = "2.0.0-rc"
tauri-build = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[profile.release-fast]
inherits = "release"
opt-level = 3
