[package]
name = "satisfactory-editor"
version = "0.1.0"
description = "A Tauri App"
authors = ["Adraax"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "satisfactory_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }
satisfactory-extractor = { workspace = true }


[dependencies]
regex = {workspace = true, features = []}
tauri = { workspace = true, features = [] }
tauri-plugin-shell = { workspace = true }
satisfactory-extractor = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri-plugin-window-state = "2.0.0"

#tauri-plugin-devtools = "2.0.0-rc"
#tauri-plugin-devtools-app = "2.0.0-rc.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-rc"
