[package]
name = "satisfactory-editor"
version = "0.1.0"
description = "A Tauri App"
authors = ["Adraax"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "satisfactory_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }
satisfactory-extractor = { workspace = true }


[dependencies]
# internal
commands ={ workspace = true}
#external
regex = {workspace = true, features = []}
tauri = { workspace = true, features = [] }
satisfactory-extractor = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri-plugin-window-state = { workspace = true }
tauri-plugin-updater = { workspace = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
